salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/Weather_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Weather Snapshot</label>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>