salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Captured_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>UTC timestamp for when this weather reading was captured from the provider.</description>
    <label>Captured At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>