salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>For display/reporting the weather condition; 
Set by system.</description>
    <label>Condition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>