salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Parent Contact for this weather snapshot (master–detail). 
Controls ownership/sharing and cascade delete.</description>
    <inlineHelpText>Select the Contact this snapshot belongs to.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Weather Snapshots</relationshipLabel>
    <relationshipName>Weather_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>