salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <description>URL to the weather condition icon.</description>
    <label>Icon URL</label>
    <type>Url</type>
</CustomField>