salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Provider_Response__c.field-meta.xml
<CustomField>
    <fullName>Provider_Response__c</fullName>
    <description>Latency in milliseconds measured for the callout.</description>
    <inlineHelpText>Measured API response time.</inlineHelpText>
    <label>Provider Response</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>