salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Temperature_c__c.field-meta.xml
<CustomField>
    <fullName>Temperature_c__c</fullName>
    <description>Air temperature in Celsius as returned by the provider. 
System-populated;</description>
    <inlineHelpText>Celsius temperature</inlineHelpText>
    <label>Temperature</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>