salesforce-weather/force-app/main/default/objects/Weather_Snapshot__c/fields/Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Key__c</fullName>
    <description>Used to deduplicate snapshots within an hour: {ContactId}:{YYYY-MM-DDTHH}</description>
    <externalId>true</externalId>
    <inlineHelpText>Key: {ContactId}:{YYYY-MM-DDTHH}</inlineHelpText>
    <label>Upsert Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>